--- a/css/style.css
+++ b/css/style.css
@@ -43,11 +43,35 @@ body{ font: 16px var(--ff)}
 .topnav .sale{ overflow-x: auto; margin-right: 1rem;}
 
 
-header{ margin: 40px 0;}
+header{ padding: 40px 0 16px; border-bottom: .5px solid #0000004d;}
 header h1{ font-size: 24px; line-height: 1;}
 header h1 a{ color: inherit; display: inline-block; line-height: 36px;}
 header nav li{ margin: 0 18px;}
 header nav a{ font-size: 16px; line-height: 1.5; display: block; padding: 6px; color: #000; }
+header nav a.active{ text-decoration: underline #808080;}
+.menu,.search{ display: none;}
+header form{ background: #f5f5f5; width: 243px; height: 38px; position: relative; padding: 10px 20px;}
+header form input{ background: none; border: none; width: 100%; height: 100%; }
+header form input:focus{ outline: none;}
+header form button{ background: none; border: none; position: absolute; right: 0; top: 50%; transform: translateY(-50%);}
+header :is(.wishlist,.cart,.menu,.search){ border: none; background: none; width: 32px; height: 32px; margin-left: 12px; }
+
+
+
+.banner{ }
+.banner aside{ border-right: .5px solid #0000004d; padding-top: 40px;}
+.banner aside{ padding-right: 17px;}
+.banner aside li:not(:last-child){ margin-bottom: 16px; }
+.banner aside a{ display: block; font-size: 16px; line-height: 24px; color: #000;}
+.banner aside a.drop::after{ content: '>'; float: right;  }
+
+.banner .slider{ margin-top: 40px; position: relative;} 
+.banner .slide{ display: none;}
+.banner .slide.active{ display: block;}
+.banner .slide a.shop{ color: #fff; position: absolute; bottom: 51px; left: 67px; text-decoration: underline; }
+
+
+
 
 
 
@@ -64,10 +88,17 @@ header nav a{ font-size: 16px; line-height: 1.5; display: block; padding: 6px; c
     .col-t-10{ grid-column: span 10;}
     .col-t-11{ grid-column: span 11;}
     .col-t-12{ grid-column: span 12;}
+    nav ul.flex{ display: none;}
+    .menu{ display: inline-block;}
+    .banner aside li:not(:last-child){ margin-bottom: 8px; }
+    .banner aside li a{ line-height: 20px;}
 }
 
 @media screen and (max-width:787px){
     .col-m-6{ grid-column: span 6;}
+    .col-m-12{ grid-column: span 12;}
+    aside{ display: none;}
+    .banner .slide a.shop{ left: 20px; bottom: 20px; }
 }
 
 
@@ -84,4 +115,6 @@ header nav a{ font-size: 16px; line-height: 1.5; display: block; padding: 6px; c
     .col-p-10{ grid-column: span 10;}
     .col-p-11{ grid-column: span 11;}
     .col-p-12{ grid-column: span 12;}
+    header form{ display: none;}
+    .search{ display: inline-block;}
 }
