--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,17 @@ h2{ font-size: 36px; font-weight: 600;}
 .view-all-products{ display: block; background: #DB4444; color: #fff; width: 234px; line-height: 56px; color: #fff; border-radius: 4px; text-align: center; margin: 0 auto 60px;}
 .sep{ height: 1px; border-bottom: .5px solid #0000004d }
 
+.cat-item{ margin: 60px 0 70px; border: 1px solid #0000004d; aspect-ratio: 170/145; display: block; text-align: center; color: #000;}
+.cat-item img{ margin: 34px 0 16px;}
+.cat-item h3{ font-weight: normal; font-size: 16px; }
+.view-all{ display: block; width: 159px; line-height: 56px; background: #DB4444; color: #fff; border-radius: 4px; text-align: center;}
+
+.full-width-ad{ background: #000; margin: 140px 0 70px; padding: 30px; color:#fff}
+
+
+footer{ padding: 80px 0 24px; background: #000; color: #fff;}
+
+
 
 
 @media screen and (max-width:980px){
