--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ img{ vertical-align: bottom;}
 button{ cursor: pointer; padding: 0;}
 label{ display: inline-block;}
 ul{ list-style: none; padding: 0;}
+h1, h2, h3, h4{ font-weight: 600;}
 
 html{ 
     font-size: 15px; 
@@ -49,13 +50,12 @@ header h1 a{ color: inherit; display: inline-block; line-height: 36px;}
 header nav li{ margin: 0 18px;}
 header nav a{ font-size: 16px; line-height: 1.5; display: block; padding: 6px; color: #000; }
 header nav a.active{ text-decoration: underline #808080;}
-.menu,.search{ display: none;}
 header form{ background: #f5f5f5; width: 243px; height: 38px; position: relative; padding: 10px 20px;}
 header form input{ background: none; border: none; width: 100%; height: 100%; }
 header form input:focus{ outline: none;}
 header form button{ background: none; border: none; position: absolute; right: 0; top: 50%; transform: translateY(-50%);}
-header :is(.wishlist,.cart,.menu,.search){ border: none; background: none; width: 32px; height: 32px; margin-left: 12px; }
-
+header :is(.wishlist,.cart,.menu,.search){ border: none; background: none; width: 32px; height: 32px; margin-left: 12px; display: inline-block; color: inherit; line-height: 32px;}
+header .menu,header .search{ display: none;}
 
 
 .banner aside{ border-right: .5px solid #0000004d; padding-top: 40px;}
@@ -76,7 +76,7 @@ header :is(.wishlist,.cart,.menu,.search){ border: none; background: none; width
 .subheading{ position: relative; margin:80px 0 24px;}
 .subheading p{ padding-left: 36px; line-height: 40px; color: #DB4444; font-size: 14px; font-weight: 600;}
 .subheading p::before{ content: ''; position: absolute; left: 0; width: 20px; height: 40px; background: #DB4444; border-radius: 4px; }
-h2{ font-size: 36px; font-weight: 600;}
+h2{ font-size: 36px;}
 
 
 .todays{ margin-top: 60px; }
@@ -93,7 +93,7 @@ h2{ font-size: 36px; font-weight: 600;}
 .product-sm :is(.wishlist,.preview) a{ display: inline-block; color: #000; line-height: 34px; }
 .product-sm .addtocart{ position: absolute; left: 0; right: 0; bottom: 0; background: #000; color: #fff; line-height: 41px; text-align: center; border-radius: 0 0 4px 4px; display: none;}
 .product-sm:hover .addtocart{ display: block;}
-.product-desc h3{ font-size: 16px; font-weight: 600; margin-top: 16px;  }
+.product-desc h3{ font-size: 16px; margin-top: 16px;  }
 .product-desc .price{  margin:  8px 0;  color:#DB4444  }
 .product-desc .price del{ color: #00000080;}
 .product-desc .rating .star{  color: #00000040; }
@@ -107,10 +107,38 @@ h2{ font-size: 36px; font-weight: 600;}
 .view-all{ display: block; width: 159px; line-height: 56px; background: #DB4444; color: #fff; border-radius: 4px; text-align: center;}
 
 .full-width-ad{ background: #000; margin: 140px 0 70px; padding: 30px; color:#fff}
+[class^="new-products"]{ background: #000; color: #fff; position: relative; }
+.new-products-lg{ margin-top: 60px; padding: 89px 30px 0;}
+.new-products-md{ margin-top: 60px;}
+.new-products-sm{ margin-top: 2rem;}
+/* .new-products-md,.new-products-sm{ background: ; } */
+.product-desc-over{ position: absolute; left: 30px; bottom: 32px; }
+.product-desc-over h3{ font-size: 24px;}
+.product-desc-over p{ margin: 10px 0;}
+.product-desc-over a{ color: inherit;}
+
+.features{ padding: 0 113.5px; margin: 140px 0; text-align: center;}
 
 
-footer{ padding: 80px 0 24px; background: #000; color: #fff;}
 
+footer{ padding: 80px 0 24px; background: #000; color: #fff; }
+footer h3{ font-size: 24px; margin-bottom: 24px; }
+footer p{ margin: 10px 0;}
+footer a{ color: inherit;}
+footer form{ position: relative; border: 1.5px solid #fff; border-radius: 4px; padding: 0 17px;}
+footer form input{ width: 100%; background: none; border: none; height: 48px; color: #fff;}
+footer form input::placeholder{color:#fff5}
+footer form input:focus{ outline: none;}
+footer form button{ position: absolute; right: 17px; top: 50%; transform: translateY(-50%); background: none; border: none; color: inherit;}
+.copy{ color: #3d3d3d; border-top: 1px solid #fff5; padding: 5px 0; margin-top: 60px;}
+.downloads{ margin: 12px 0 24px;}
+.playstore,.appstore{ display: block; width: 134px; line-height: 30px; border: 1px solid #fff; border-radius: 4px; margin: 0 0 10px 10px;}
+
+/* contact */
+.breadcrumb{ margin: 50px 0;}
+.breadcrumb ol{list-style: none; padding: 0;}
+.breadcrumb li:not(:first-child)::before{  content: '/'; }
+.breadcrumb a{ color: inherit; display: inline-block; padding: 0 10px;}
 
 
 
