--- a/css/style.css
+++ b/css/style.css
@@ -56,13 +56,20 @@ header form input:focus{ outline: none;}
 header form button{ background: none; border: none; position: absolute; right: 0; top: 50%; transform: translateY(-50%);}
 header :is(.wishlist,.cart,.menu,.search){ border: none; background: none; width: 32px; height: 32px; margin-left: 12px; display: inline-block; color: inherit; line-height: 32px;}
 header .menu,header .search{ display: none;}
+.account{border: none; background: none; display: inline-block; width: 32px; line-height: 32px; border-radius: 50%;}
+.account.active{ background: #DB4444; color: #fff;}
+.posr{ position: relative;}
+.account-dropdown{ padding: 20px; background: #0001; position: absolute; right: 0; top: 100%; border-radius: 4px; z-index: 1; backdrop-filter: blur(75px); display: none;}
+.account-dropdown li{ margin-bottom: 1rem;}
+.account-dropdown a{ color: #fff;}
 
 
 .banner aside{ border-right: .5px solid #0000004d; padding-top: 40px;}
 .banner aside{ padding-right: 17px;}
 .banner aside li:not(:last-child){ margin-bottom: 16px; }
 .banner aside a{ display: block; font-size: 16px; line-height: 24px; color: #000;}
-.banner aside a.drop::after{ content: '>'; float: right;  }
+.banner aside a.drop::after{ content: '>'; float: right; }
+.banner .cat-dropdown{ position: absolute; left: 100%; background: #fffa; top: 40px; white-space: nowrap; z-index: 1; transform: translateX(1px); padding: 40px; display: none; backdrop-filter: blur(75px);}
 
 .banner .slider{ margin-top: 40px; position: relative;} 
 .banner .slide{ display: none;}
