--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,10 @@ h1, h2, h3, h4{ font-weight: 600;}
 html{ 
     font-size: 15px; 
     --ff: system-ui, sans-serif;
+    scroll-behavior: smooth;
 }
 
-body{ font: 16px var(--ff)}
+body{ font: 16px var(--ff);}
 
 .container{ max-width: 1200px; margin: auto; padding: 0 1rem;}
 .row{ display: grid; grid-template-columns: repeat(12,1fr); gap: 2rem;}
@@ -63,7 +64,6 @@ header .menu,header .search{ display: none;}
 .account-dropdown li{ margin-bottom: 1rem;}
 .account-dropdown a{ color: #fff;}
 
-
 .banner aside{ border-right: .5px solid #0000004d; padding-top: 40px;}
 .banner aside{ padding-right: 17px;}
 .banner aside li:not(:last-child){ margin-bottom: 16px; }
@@ -71,14 +71,15 @@ header .menu,header .search{ display: none;}
 .banner aside a.drop::after{ content: '>'; float: right; }
 .banner .cat-dropdown{ position: absolute; left: 100%; background: #fffa; top: 40px; white-space: nowrap; z-index: 1; transform: translateX(1px); padding: 40px; display: none; backdrop-filter: blur(75px);}
 
-.banner .slider{ margin-top: 40px; position: relative;} 
-.banner .slide{ display: none;}
-.banner .slide.active{ display: block;}
+.banner .slider{ margin-top: 40px; } 
 .banner .slide a.shop{ color: #fff; position: absolute; bottom: 51px; left: 67px; text-decoration: underline; }
-.pager{ position: absolute; bottom: 11px; left: 50%; transform: translateX(-50%);}
-.pager li{ margin: 0 6px;}
-.pager a{ display: block; width: 12px; height: 12px; background: #808080; border-radius: 50%;}
-.pager a.active{ width: 14px; height: 14px; background: #fff; border: 2px solid #DB4444; }
+
+.banner .bx-wrapper{ box-shadow: 0 0 transparent; border: none; margin-bottom: 0;}
+.banner .bx-wrapper .bx-pager{ bottom: 10px; display: flex; align-items: center; justify-content: center; }
+.banner .bx-wrapper .bx-pager.bx-default-pager a{ width: 12px; height: 12px; background: #ffffff80; border-radius: 50%; border: 2px solid transparent;}
+.banner .bx-wrapper .bx-pager.bx-default-pager a.active{ width: 14px; height: 14px; border: 2px solid #fff; background: #DB4444; }
+.banner .bx-wrapper .bx-pager.bx-default-pager a:focus,.banner .bx-wrapper .bx-pager.bx-default-pager a:hover{ border: 2px solid #fff; background: #DB4444; }
+
 
 .subheading{ position: relative; margin:80px 0 24px;}
 .subheading p{ padding-left: 36px; line-height: 40px; color: #DB4444; font-size: 14px; font-weight: 600;}
@@ -86,7 +87,9 @@ header .menu,header .search{ display: none;}
 h2{ font-size: 36px;}
 
 
-.todays{ margin-top: 60px; }
+.todays{ margin-top: 60px;  }
+.ticker{ display: flex; overflow-x: auto;}
+.ticker-item{ flex: 0 0 25% }
 .controls{ gap: 8px;}
 .controls a{ display: block; width: 46px; line-height: 46px; background: #f5f5f5; border-radius: 50%; text-align: center; font-size: 24px; color: #000;}
 
