--- a/css/style.css
+++ b/css/style.css
@@ -99,9 +99,15 @@ h2{ font-size: 36px;}
 
 .ticker{ display: flex; }
 .ticker-item{ flex: 0 0 25% }
-.controls{ gap: 8px;}
-.controls a{ display: block; width: 46px; line-height: 46px; background: #f5f5f5; border-radius: 50%; text-align: center; font-size: 24px; color: #000;}
-
+/* .controls{ gap: 8px;}
+.controls a{ display: block; width: 46px; line-height: 46px; background: #f5f5f5; border-radius: 50%; text-align: center; font-size: 24px; color: #000;} */
+.todays .slick-prev{ top: 0; left: auto; right: 50px; width: 46px; height: 46px; background: #f5f5f5; border-radius: 50%; text-align: center;  cursor: pointer; text-align: center; } 
+.todays .slick-next{ top: 0; right: 0; width: 46px; height: 46px; background: #f5f5f5; border-radius: 50%; text-align: center;  cursor: pointer; text-align: center;} 
+.todays .slick-prev::before{ content: "←"; font-size: 24px;  font-family: sans-serif; color: #000;}
+.todays .slick-next::before{ content: '→'; font-size: 24px;  font-family: sans-serif; color: #000;}
+.days,.hours,.mins,.secs{ font-size: 1.2em;}
+:is(.days,.hours,.mins,.secs) span{ display: block; font-size: 2em;}
+.blink{ color: #DB4444; font-size: 2em; margin: 0 15px;}
 
 .product-sm{ margin: 31px 0 60px; }
 .product-img{ background: #f5f5f5; position: relative; aspect-ratio: 270/250;  display: grid; place-items: center; border-radius: 4px; }
